Fix error messages in sign up box
- The font size was being inherited from 'promo-container', which
made the error messages too big

--- a/app/assets/stylesheets/sections/_home.scss
+++ b/app/assets/stylesheets/sections/_home.scss
@@ -120,6 +120,7 @@
 .sign-up-box {
   padding: 1.5rem 2rem 2.3rem 2rem;
   background: $darker-background;
+  font-size: 1.05rem;
   border: 1px solid #dee0e3;
   border-radius: $box-radius * 2;
 
